# disco-machina

./: .gitignore  CLAUDE.md  Dockerfile  FLOWS.md  README.md  TECHNICAL_DETAILS.md  discomachina  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  robust_chat.py  simple_chat.py  terminal_client.py  test_chat.py
db/: chroma.sqlite3
docs/: README.md  changes_summary.md  client_usage.md  project_summary.md  terminal_client_changes.md  terminal_interaction_guide.md
docs/technical/: AGENTS.md  API.md  ARCHITECTURE.md  CREWAI.md  CREWAI_IMPLEMENTATION.md  FLOWS.md  PERFORMANCE.md  SECURITY.md  TOOLS.md
output/test_project/: .coverage  README.md  SUCCESS_METRICS.md  TEST_SUMMARY.md  environment.yml  main.py  pytest.ini  requirements-dev.txt  run.py  run_tests.sh  setup.py
output/test_project/automation/: youtube_automator.py
output/test_project/calculator/: __init__.py  calculator.py  cli.py
output/test_project/games/: hangman.py
output/test_project/tests/: conftest.py
output/test_project/web_app/: .env.example  .env.test  README.md  cypress.json  jest.config.js  package.json  tsconfig.json
src/dev_team/: __init__.py  crew.py  main.py  server.py
src/dev_team/config/: agents.yaml  tasks.yaml
src/dev_team/docs/: implementation.md  (+1 more)
tests/: README.md  conftest.py  run_tests.sh
tests/e2e/: test_terminal_client.py  test_working_directory_flow.py
tests/integration/: test_server_api.py  test_training.py  test_websocket.py
tests/unit/: test_context_management.py  test_crew.py  test_error_recovery.py
(+41 files in other folders)
