[project]
name = "dev_team"
version = "0.1.0"
description = "Software Development Crew using crewAI with Agile methodologies and architecture optimization"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "openai>=1.3.0",
    "pydantic>=2.4.2",
    "pyyaml==6.0.1",
    "litellm>=1.57.4",
    "crewai-tools>=0.33.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0"
]

[project.scripts]
dev_team = "dev_team.main:run"
run_crew = "dev_team.main:run"
train = "dev_team.main:train"
replay = "dev_team.main:replay"
test = "dev_team.main:test"
reset_memory = "dev_team.main:reset_memory"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
